--- a/idex2.css
+++ b/idex2.css
@@ -2,39 +2,64 @@
     margin: 0;
     padding: 0;
 }
-.navbar a {
-    color: black
+body {
+    
+    background-color: #f4f4f4;
+    margin-top: 50px; 
+}
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    padding: 10px 0;
 }
 
-.navbar a:hover {
-    color: gold;
-}
 
-.navbar img {
-    width: 100px;
-    height: 100px;
-}
-
-.navbarScroll.navbarDark {
-    background-color: black;
-}
-
-.navbar-brand {
-    font-size: 2rem;
-    font-weight: bold;
+.navbar .navbar-brand {
     color: white;
+    text-align: center; 
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.nav-link {
-    font-size: 1.2rem;
-    font-weight: bold;
-    color: black;
-    margin-right: 30px;
+
+.navbar-toggler {
+    border: none;
 }
+
+.navbar .navbar-nav {
+    display: flex;
+    justify-content: center; 
+    list-style-type: none;
+    padding: 0;
+}
+
+
+.navbar .navbar-nav .nav-item {
+    margin-right: 20px; 
+}
+
+.navbar .navbar-nav .nav-link {
+    color: white;
+    text-decoration: none;
+    padding: 10px 20px;
+    display: block;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+
+.navbar .navbar-nav .nav-link:hover {
+    background-color: #575757;
+}
+
+
 .intro{
     padding: 100px;
     text-align: center;
-    /* display: flex; */
-    justify-content: center;
-    align-items: center;
+  
 }
